@@ -1,7 +1,7 @@
-# $Id: pod-coverage.t,v 1.2 2007/05/17 23:53:34 Daddy Exp $
+# $Id: pod-coverage.t,v 1.1 2008/02/15 23:16:45 Daddy Exp $
 use Test::More;
 my
-$VERSION = do { my @r = (q$Revision: 1.2 $ =~ /\d+/g); sprintf "%d."."%03d" x $#r, @r };
+$VERSION = do { my @r = (q$Revision: 1.1 $ =~ /\d+/g); sprintf "%d."."%03d" x $#r, @r };
 eval "use Test::Pod::Coverage 1.00";
 plan skip_all => "Test::Pod::Coverage 1.00 required for testing POD coverage" if $@;
 all_pod_coverage_ok();
